--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tweetsky",
+  "name": "tweetsky_app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "react": "15.4.2",
-    "react-native": "0.40.0"
+    "react-native": "0.40.0",
+    "react-native-autocomplete-input": "^3.0.0",
+    "react-native-vector-icons": "^4.0.0"
   },
   "devDependencies": {
     "babel-jest": "18.0.0",
@@ -24,6 +26,8 @@
   "jest": {
     "preset": "react-native",
     "collectCoverage": true,
-    "collectCoverageFrom": ["src/**"]
+    "collectCoverageFrom": [
+      "src/**"
+    ]
   }
 }
