--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "react-native": "0.40.0",
     "react-native-autocomplete-input": "^3.0.0",
     "react-native-vector-icons": "^4.0.0",
+    "react-redux": "^5.0.2",
+    "redux": "^3.6.0",
+    "redux-logger": "^2.8.1",
+    "redux-thunk": "^2.2.0",
     "twitter": "^1.7.0"
   },
   "devDependencies": {
